[package]
name = "irys-p2p"
version = "0.1.0"
edition = "2021"

[dependencies]
# Internal dependencies
irys-actors.workspace = true
irys-domain = { workspace = true, features = ["test-utils"] }
irys-types.workspace = true
irys-database.workspace = true
irys-vdf.workspace = true
irys-reth-node-bridge.workspace = true
irys-utils.workspace = true
# Other dependencies
actix-web = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
tracing-actix-web = { version = "0.7", features = ["opentelemetry_0_31"] }
eyre.workspace = true
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
serde = { workspace = true }
reth-tasks.workspace = true
lru.workspace = true
async-trait = "0.1"
reth.workspace = true
reth-ethereum-primitives.workspace = true
moka.workspace = true
futures.workspace = true
serde_json.workspace = true
bytes.workspace = true
dashmap = "6.1.0"
semver.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
irys-testing-utils.workspace = true
irys-types = { workspace = true, features = ["test-utils"] }
irys-api-client = { workspace = true, features = ["test-utils"] }
irys-actors = { workspace = true, features = ["test-utils"] }
irys-storage.workspace = true
async-trait = "0.1"

[lints]
workspace = true
