[package]
name = "packing-worker"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
tokio.workspace = true
clap.workspace = true
eyre.workspace = true
serde.workspace = true
actix-web.workspace = true
tracing.workspace = true
socket2.workspace = true
toml.workspace = true
futures-util.workspace = true
futures.workspace = true

irys-packing.workspace = true
# irys-packing = { workspace = true, features = ["nvidia"] }
irys-types = { workspace = true, features = ["test-utils"] }
irys-testing-utils.workspace = true
irys-utils.workspace = true

[features]
nvidia = ["irys-packing/nvidia"]

[lints]
workspace = true
