[package]
name = "irys-packing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "packing-bench"
path = "src/bench.rs"
required-features = ["nvidia"]

[dependencies]
irys-c.workspace = true
irys-types.workspace = true
rand.workspace = true
serde.workspace = true
eyre.workspace = true

[dev-dependencies]
irys-types = { workspace = true, features = ["test-utils"] }
proptest.workspace = true
rstest.workspace = true
serde_json.workspace = true
test-log.workspace = true

[features]
nvidia = ["irys-c/nvidia"]

[lints]
workspace = true
