[package]
name = "irys-price-oracle"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
irys-types.workspace = true
eyre = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }
test-log = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }

[lints]
workspace = true

[features]
test-utils = [
  "irys-types/test-utils",
  "dep:tokio",
]
