[package]
name = "irys-price-oracle"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[package.metadata.cargo-machete]
ignored = ["rust_decimal"]

[dependencies]
irys-types.workspace = true
eyre = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
rust_decimal = { workspace = true, features = ["serde-with-float"] }
rust_decimal_macros = { workspace = true }
reqwest = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true }
reth = { workspace = true }
chrono.workspace = true

[dev-dependencies]
tokio = { workspace = true }
test-log = { workspace = true }

[lints]
workspace = true
