[package]
edition = "2021"
name = "irys-reth-node-bridge"
version = "0.1.0"

[dependencies]
irys-packing.workspace = true
irys-storage.workspace = true
irys-database.workspace = true
irys-types.workspace = true
tracing.workspace = true
futures.workspace = true
clap = "4.5.4"
eyre = "0.6.12"
futures-util.workspace = true
jsonrpsee = { version = "0.24", features = ["client", "macros", "server"] }
jsonrpsee-core = "0.24"
jsonrpsee-types = "0.24"
serde = "1.0.203"
serde_json = "1.0.117"
strum = "0.26.3"
thiserror = "1.0.61"
tokio = "1.37.0"
tokio-stream.workspace = true

[features]
default = ["jemalloc"]
jemalloc = []
