[package]
name = "irys-storage"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
nodit.workspace = true
eyre.workspace = true
serde_json.workspace = true
irys-types = { workspace = true, features = ["test-utils"] }
tracing.workspace = true
tokio.workspace = true
irys-database.workspace = true
reth-db.workspace = true

[features]
# Exposes test-only helpers (e.g. `open_or_create_irys_consensus_data_db`, which
# applies the small TEST_DB_GEOMETRY_MAX_SIZE cap) to downstream crates' test
# builds. Production code must never enable this — it opens the consensus DB via
# `consensus_db_args` + `open_or_create_irys_consensus_data_db_with_args` instead.
test-utils = []

[dev-dependencies]
irys-testing-utils.workspace = true
test-log.workspace = true
proptest.workspace = true
rstest.workspace = true

[lints]
workspace = true
