[package]
name = "irys-vdf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
irys-types.workspace = true
irys-database.workspace = true
irys-efficient-sampling.workspace = true
irys-domain.workspace = true
sha2.workspace = true
rayon.workspace = true
reth-db.workspace = true
tokio.workspace = true
tokio-util.workspace = true
eyre.workspace = true
tracing.workspace = true
openssl.workspace = true
hex.workspace = true
base58.workspace = true
nodit.workspace = true

[dev-dependencies]
irys-types = { workspace = true, features = ["test-utils"] }
irys-database = { workspace = true, features = ["test-utils"] }
tracing-subscriber.workspace = true
criterion.workspace = true
proptest.workspace = true
rstest.workspace = true
test-log.workspace = true

[[bench]]
name = "vdf_bench"
harness = false

[lints]
workspace = true
