[package]
name = "irys-vdf"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[features]
# Exposes narrow test mutation handles (`VdfStateReadonly::test_set_step`,
# `ReanchorSignals::test_record_heal_applied`) for downstream crates' tests
# (e.g. irys-p2p, irys-actors). Production code must never enable this.
test-utils = []

[dependencies]
irys-types.workspace = true
irys-efficient-sampling.workspace = true
irys-domain.workspace = true
irys-utils.workspace = true
opentelemetry.workspace = true
sha2.workspace = true
rayon.workspace = true
tokio.workspace = true
tokio-util.workspace = true
eyre.workspace = true
tracing.workspace = true
openssl.workspace = true
hex.workspace = true
base58.workspace = true
nodit.workspace = true
thiserror.workspace = true

[dev-dependencies]
irys-types = { workspace = true, features = ["test-utils"] }
opentelemetry_sdk = { workspace = true, features = ["testing"] }
tokio = { workspace = true, features = ["test-util"] }
tracing-subscriber.workspace = true
criterion.workspace = true
proptest.workspace = true
rstest.workspace = true
test-log.workspace = true

[[bench]]
name = "vdf_bench"
harness = false

[package.metadata.cargo-machete]
ignored = ["opentelemetry"]

[lints]
workspace = true
