[package]
name = "irys-macros-diag-slow"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["full"] }
quote = { workspace = true }

[lints]
workspace = true
