[package]
name = "irys-multiversion-tests"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "process",
    "signal",
    "time",
    "fs",
    "io-util",
    "sync",
] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
futures = "0.3"
thiserror = { workspace = true }
nix = { version = "0.29", features = ["signal", "process"] }

[dev-dependencies]
test-log = { version = "0.2", features = ["trace"] }
tempfile = "3"
proptest = "1"
rstest = "0.25"
irys-testing-utils = { path = "../../utils/testing-utils" }

[lints]
workspace = true
