[package]
name = "irys-multiversion-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "macros",
    "process",
    "signal",
    "time",
    "fs",
    "io-util",
    "sync",
] }
reqwest = { workspace = true, features = [
    "json",
    "rustls-tls",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
nix = { workspace = true }

[dev-dependencies]
test-log = { workspace = true }
tempfile = { workspace = true }
proptest = { workspace = true }
rstest = { workspace = true }
irys-testing-utils = { workspace = true }

[lints]
workspace = true
