[package]
name = "nextest-cpu-monitor"
version = "0.1.0"
edition = "2021"
description = "A wrapper tool to monitor CPU usage of cargo-nextest test binaries"
license = "MIT"

[[bin]]
name = "nextest-cpu-wrapper"
path = "src/wrapper.rs"

[[bin]]
name = "nextest-cpu-report"
path = "src/report.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
clap = { version = "4.4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
# No special dependencies needed for macOS
