[package]
name = "nextest-monitor"
version = "0.1.0"
edition = "2021"
description = "A wrapper tool to monitor CPU and memory usage of cargo-nextest test binaries, with pass/fail tracking"
license = "MIT"

[lib]
path = "src/lib.rs"

[[bin]]
name = "nextest-wrapper"
path = "src/bin/nextest-wrapper.rs"

[[bin]]
name = "nextest-report"
path = "src/bin/nextest-report.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
clap = { version = "4.4", features = ["derive"] }
chrono.workspace = true
regex = "1.10"

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
