[package]
name = "irys-testing-utils"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
tempfile.workspace = true
color-eyre.workspace = true
tracing-error.workspace = true
rand.workspace = true
chrono = { version = "0.4.41", default-features = false, features = ["now"] }
nix = { workspace = true }
irys-utils = { path = "../utils" }
irys-types = { path = "../../types" }

[features]
default = []
telemetry = ["irys-utils/telemetry"]

[lints]
workspace = true
